2008-08-24  Geoff Cant  <gcant@process-one.net>

	* src/mod_mud/mod_muc_room.erl: is_visitor/2 fix - use get_role
	not get_affiliation

2008-08-22  Badlop  <badlop@process-one.net>

	* src/ejabberd_router.erl: Fix call to mnesia match_object

2008-08-21  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Fix names of chatroom to room, user to occupant
	* doc/guide.html: Likewise

2008-08-18  Badlop  <badlop@process-one.net>

	* src/mod_register.erl: Change password using mod_register always
	returns success regardless of real result (EJAB-723)
	* src/ejabberd_auth.erl: Likewise
	* src/ejabberd_auth_external.erl: Likewise
	* src/ejabberd_auth_internal.erl: Likewise
	* src/ejabberd_auth_odbc.erl: Likewise

2008-08-16  Badlop  <badlop@process-one.net>

	* src/msgs/sv.msg: Fixed formatting typos

	* src/gen_mod.erl: Export stop_module_keep_config/2 (EJAB-706)

2008-08-13  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Explain that LDAP is read-only storage (thanks to
	Evgeniy Khramtsov)
	* doc/guide.html: Likewise

2008-08-10  Badlop  <badlop@process-one.net>

	* src/msgs/eo.msg: Updated (thanks to Andreas van Cranenburgh)
	* src/msgs/nl.msg: Updated (thanks to Andreas van Cranenburgh)
	* src/msgs/sk.msg: Updated (thanks to Marek Becka)
	* src/msgs/sv.msg: Updated (thanks to Thore Alstromer and Heysan)

2008-08-09  Badlop  <badlop@process-one.net>

	* src/ejabberd_service.erl: Fix XEP-0114 compliance: define xmlns
	in header of error response; include in response the JID of served
	component not server (thanks to Sergei Golovan)(EJAB-717)

2008-08-01  Badlop  <badlop@process-one.net>

	* doc/release_notes_2.0.2.txt: Added for ejabberd 2.0.2-beta1

	* src/web/ejabberd_http.erl: Temporary solution for check of
	packet size when HTTPS (EJAB-611)(EJAB-507)(EJAB-574)

2008-07-31  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Update Process-one name to ProcessOne (EJAB-708)
	* doc/guide.html: Likewise
	* doc/api/overview.edoc: Likewise
	* src/*/*.erl: Likewise